// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> it renders with addition 1`] = `
<h1
  className="mfui-beta-header mfui-beta-header_color_black mfui-beta-header_level_h1 mfui-beta-header_h-align_inherit"
>
  <div
    className="mfui-beta-header__addition"
  >
    <div />
  </div>
</h1>
`;

exports[`<Header /> it renders with children 1`] = `
<h1
  className="mfui-beta-header mfui-beta-header_color_black mfui-beta-header_level_h1 mfui-beta-header_h-align_inherit"
>
  <section />
</h1>
`;

exports[`<Header /> it renders with text align center 1`] = `
<h1
  className="mfui-beta-header mfui-beta-header_color_black mfui-beta-header_level_h1 mfui-beta-header_h-align_center"
/>
`;

exports[`<Header /> it renders with white color class 1`] = `
<h1
  className="mfui-beta-header mfui-beta-header_color_white mfui-beta-header_level_h1 mfui-beta-header_h-align_inherit"
/>
`;

exports[`<Header /> it renders without class margin 1`] = `
<h1
  className="mfui-beta-header mfui-beta-header_color_black mfui-beta-header_level_h1 mfui-beta-header_h-align_inherit"
/>
`;
